# AnsiGL

./: .gitignore  AUTHORS  INSTALL  README  configure.ac
AnsiGL_test/: build.sh  main.cpp
AnsiGL_test/unit_tests/: Makefile.am  configure.ac  main.cpp  test_ANSICodeList.cpp  test_ANSIColorDef.cpp  test_ANSIColorPalette.cpp  test_Area.cpp  test_Color.cpp  test_ColorComponent.cpp  test_ColorPalette.cpp  test_FixedArea.cpp  test_Pixel.cpp  test_Point.cpp  test_Scanline.cpp  test_Surface.cpp  test_TEMPLATE.cpp  test_achar.cpp  test_astring.cpp  test_uchar.cpp  test_ustring.cpp  unit_test.h
doc/: .TEMPLATE.txt  ClassOverview.txt  EncodingSyntax.txt  NcursesSetup.txt  TODO.txt
doc/Basic/: achar.txt  astring.txt  string.txt  uchar.txt  ustring.txt
doc/Foundational/Physical/: Pixel.txt  Surface.txt
doc/Foundational/Spacial/: Area2D.txt  Area3D.txt  FixedArea2D.txt  FixedArea3D.txt  Point2D.txt  Point3D.txt
doc/Objects/: Animation.txt  Camera.txt  Clone.txt  Content.txt  Context.txt  Image.txt  InputText.txt  InputWindow.txt  Sprite.txt  Text.txt  TextWindow.txt  Window.txt  WindowBorders.txt
src/: Makefile.am  achar.cpp  animation.cpp  ansi.cpp  area.cpp  camera.cpp  clone.cpp  color.cpp  content.cpp  context.cpp  image.cpp  inputtext.cpp  inputwindow.cpp  pixel.cpp  point.cpp  sprite.cpp  string.cpp  surface.cpp  text.cpp  textwindow.cpp  uchar.cpp  window.cpp
src/AnsiGL/: achar.h  animation.h  ansi.h  area.h  camera.h  clone.h  color.h  content.h  context.h  defines.h  image.h  inputtext.h  inputwindow.h  pixel.h  point.h  screen.h  sprite.h  string.h  surface.h  text.h  textwindow.h  uchar.h  window.h
src/AnsiGL/ncurses/: ncurses.h
src/ncurses/: Makefile.am  ncurses.cpp
