AC_PREREQ([2.68])
AC_INIT([AnsiGL_unit_tests], [0.1], [nrobertson454@gmail.com])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([unit_test.h])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL

# Checks for library functions.

AC_CONFIG_FILES([Makefile])

AC_OUTPUT

